--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -47,15 +47,16 @@
                     app:srcCompat="@drawable/back" />
 
                 <TextView
-                    android:id="@+id/imageView7"
+                    android:id="@+id/more_jobs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imageView8"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text="Upload Resume "
-                    android:textColor="@color/gray_dark"
+                    android:text="More Jobs "
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
                      />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
