--- a/app/src/main/res/layout/activity_admin_manage_jobs.xml
+++ b/app/src/main/res/layout/activity_admin_manage_jobs.xml
@@ -22,6 +22,25 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="Search jobs by title, company, or location"
+            android:iconifiedByDefault="false"
+            android:layout_margin="8dp" />
+        <TextView
+            android:id="@+id/noResultsText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No jobs found"
+            android:textSize="16sp"
+            android:textColor="@color/gray_dark"
+            android:gravity="center"
+            android:padding="16dp"
+            android:visibility="gone" />
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/jobRecyclerView"
             android:layout_width="match_parent"
