--- a/app/src/main/res/layout/activity_help_support.xml
+++ b/app/src/main/res/layout/activity_help_support.xml
@@ -41,12 +41,12 @@
         android:icon="@drawable/baseline_email_24"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonCall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Call Support"
-        android:icon="@drawable/baseline_call_24"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+<!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:id="@+id/buttonCall"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Call Support"-->
+<!--        android:icon="@drawable/baseline_call_24"-->
+<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />-->
 
 </LinearLayout>
