--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@color/white"
     tools:context=".Activity.LoginActivity">
     <Toolbar android:layout_width="match_parent" android:layout_height="wrap_content">
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_arrow_back_24" app:tint="@color/blue"/>
+        <ImageView android:id="@+id/backButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_arrow_back_24" app:tint="@color/blue"/>
     </Toolbar>
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center" android:layout_marginTop="30dp">
         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Welcome To" android:textColor="@color/black" android:textStyle="bold" android:textSize="30sp"/>
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:text=" SmileJobs"
-            android:textColor="@color/purple" android:textStyle="bold"
-            android:textSize="25sp"/>
+        <TextView
+            android:id="@+id/websiteTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SmileJobs"
+            android:textColor="@color/purple"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:autoLink="web"
+            android:linksClickable="true"
+            android:padding="8dp" />
+
     </LinearLayout>
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
         android:text="@string/text2" android:gravity="center" android:textSize="20sp"
