--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,10 @@
     <color name="success_green">#4CAF50</color>
     <color name="gray_dark">#757575</color>
 
+    <color name="primaryColor">#6200EE</color>
+    <color name="gray">#757575</color>
+    <color name="errorColor">#D32F2F</color>
+
+
+
 </resources>
