--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SmileJobPortal" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--        <item name="android:windowSplashScreenBackground" tools:targetApi="31">@android:color/white</item>-->
+<!--        <item name="android:windowSplashScreenAnimatedIcon">@drawable/splash_screen</item>-->
+<!--        <item name="android:windowSplashScreenIconBackgroundColor">@null</item>-->
+<!--        <item name="postSplashScreenTheme">@style/Theme.SmileJobPortal</item>-->
+
     </style>
 
     <style name="Theme.SmileJobPortal" parent="Base.Theme.SmileJobPortal" />
@@ -16,4 +19,10 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textAlignment">center</item>
     </style>
+
+
+
+
+
+
 </resources>
